--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
           <script type="text/javascript">
 
-            login = 'B0$$_of_ADm1nS'
+            login = '&#x42;&#x30;&dollar;&dollar;&lowbar;&#x6f;&#x66;&lowbar;&#x41;&#x44;&#x6d;&#x31;&#x6e;&#x53;'
             pass = '%63%70%61%73%62%69%65%6e%64%75%72%70%61%73%73%77%6f%72%64';
             l = window.prompt('Enter login');
             h = window.prompt('Enter password');
